--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.1",
+    "rescript-remix": "^0.2.1",
     "rescript-webapi": "^0.2.0"
   },
   "devDependencies": {
